# sales_streamlit_dashboard

./: .gitignore  README.md  XGBoost.ipynb  config.yaml  main.py  pyproject.toml  ruff.toml
.github/workflows/: code_quality.yaml
.streamlit/: config.toml
e-commerce_architecture/latex_source/: content.tex  main.tex  references.bib  titlepage.tex
src/: Home.py  coming.py  config.py  loader.py
src/pages/: 1.py  2.py  3.py  4.py
src/utils/: utils.py
